Add IMAGE=debian & IMAGE_VERSION=stable-slim

--- a/hooks/build
+++ b/hooks/build
@@ -2,7 +2,8 @@
 
 docker build \
     --no-cache \
-    --build-arg DEBIAN_VERSION=stable-slim \
+    --build-arg IMAGE=debian \
+    --build-arg IMAGE_VERSION=stable-slim \
     --build-arg ACCOUNT=docker \
     --build-arg USERMAIL=usermail@usermail \
     --build-arg USER=user@user \
